@@ -1254,3 +1254,5 @@
 20050226 perl/cpp-perl.pl,perl/Fuse/Dialog.pm,ui/options.dat,
 	 ui/gtk/Makefile.am,widget/Makefile.am: allow SDL full-screen mode
 	 to be used (patch #1150687) (Darren).
+20050305 widget/widget.c: 'round' widget corners (patch #1150690)
+	 (Darren).
